# MyCAE

./: .gitignore  APPFlow架构参考总结.md  CMakeLists.txt  MyCAE_CalculiX悬臂梁仿真测试用例.md  MyCAE_软件实现方案_架构与关键技术说明.md  MyCAE全功能测试用例.md  MyCAE完整功能测试教程.md  MyCAE测试参数设置指南.md  MyCAE项目说明文档.md  README.md  analyze_glad.py  check_autoinit.py  check_crt_version.py  check_vtk_core.py  copy_dlls.bat  debug_log.txt  debug_run.bat  find_bad_dllmain.py  find_crash_dll.py  find_crash_dll2.py  run_clean.bat  run_direct.bat  run_no_jemalloc.bat  run_pure.bat  run_simple.bat  run_test.bat  solver_data_structure_overview.md  solver_plugin_architecture.md  step.md  test_minimal.cpp  test_qt_only.cpp  三人协作分工与仿真流程推进计划.md  三人并行开发接口契约.md  工作线A-仿真后处理能力.md  工作线B-工程稳定性与用户体验.md  案例.md  项目全貌与仿真流程推进.md  项目功能测试流程.md
APPFlow/: Create_Flow_sln.bat  InitSubmodules.bat  License.txt
APPFlow/.hooks/: AutomaticCompilation.bat
APPFlow/FlowApp/: CommandLineHandler.cpp  CommandLineHandler.h  ComponentFactory.cpp  ComponentFactory.h  Create_X64_Project.bat  FlowAPPSettings.cpp  FlowAPPSettings.h  FlowApp.pro  GlobalDataFactory.cpp  GlobalDataFactory.h  MainWindowGenerator.cpp  MainWindowGenerator.h  PreWindowInitializer.cpp  PreWindowInitializer.h  SignalProcessor.cpp  SignalProcessor.h  SystemChecker.cpp  SystemChecker.h  WorkBenchHandler.cpp  WorkBenchHandler.h  main.cpp
APPFlow/GUIFrame/: ActionEventHandler.cpp  ActionEventHandler.h  ControlPanelWidget.cpp  ControlPanelWidget.h  GUIFrameAPI.h  GroupPropertyWidget.cpp  GroupPropertyWidget.h  MainMenu.cpp  MainMenu.h  MainTreeWidget.cpp  MainTreeWidget.h  MainWindow.cpp  MainWindow.h  PanelWidgetBase.cpp  PanelWidgetBase.h  PropertyWidget.cpp  PropertyWidget.h  RenderWidget.cpp  RenderWidget.h  TabWidget.cpp  TabWidget.h
APPFlow/GUIWidget/: CompLineEdit.cpp  CompLineEdit.h  CompTreeItem.cpp  CompTreeItem.h  GUIDialogBase.cpp  GUIDialogBase.h  GUIPickInfo.cpp  GUIPickInfo.h  GUIWidget.pro  GUIWidgetAPI.h  GUIWidgetBase.cpp  GUIWidgetBase.h  MainMenuBase.cpp  MainMenuBase.h  PickedData.cpp  PickedData.h  PickedDataCalculator.cpp  PickedDataCalculator.h  PickedDataProvider.cpp  PickedDataProvider.h  PropertyChildWidgetBase.cpp  PropertyChildWidgetBase.h  PropertyEmptyWidget.cpp  PropertyEmptyWidget.h  TreeWidget.cpp  TreeWidget.h  WidgetOCCEvent.cpp  WidgetOCCEvent.h  vtk.pri
APPFlow/GraphDataProvider/: GraphDataProviderAPI.h  GraphMarkProvider.cpp  GraphMarkProvider.h  GraphModelProvider.cpp  GraphModelProvider.h  GraphProviderBase.cpp  GraphProviderBase.h  GraphProviderManager.cpp  GraphProviderManager.h
APPFlow/OperatorsGUI/: OperGraphEvent3D.cpp  OperGraphEvent3D.h  OperGraphPick.cpp  OperGraphPick.h  OperGraphPickPreview.cpp  OperGraphPickPreview.h  OperGraphPreprocess.cpp  OperGraphPreprocess.h  OperModelTreeMouseEvent.cpp  OperModelTreeMouseEvent.h  OperToolbarViews.cpp  OperToolbarViews.h  OperatorsGUIAPI.h  OpersGUIInterface.cpp  OpersGUIInterface.h
APPFlow/OperatorsInterface/: GraphEventOperator.cpp  GraphEventOperator.h  GraphInteractionOperator.cpp  GraphInteractionOperator.h  OperatorsInterfaceAPI.h  ParaWidgetInterfaceOperator.cpp  ParaWidgetInterfaceOperator.h  TreeEventOperator.cpp  TreeEventOperator.h
APPFlow/OperatorsModel/: OperManagerBase.cpp  OperManagerBase.h  OperatorsBoundaryConditions.cpp  OperatorsBoundaryConditions.h  OperatorsCFDPost.cpp  OperatorsCFDPost.h  OperatorsDiscretization.cpp  OperatorsDiscretization.h  OperatorsGeoBool.cpp  OperatorsGeoBool.h  OperatorsGeoCubeManager.cpp  OperatorsGeoCubeManager.h  OperatorsGeoCylinderManager.cpp  OperatorsGeoCylinderManager.h  OperatorsGeoSphereManager.cpp  OperatorsGeoSphereManager.h  OperatorsImportManager.cpp  OperatorsImportManager.h  OperatorsInitial.cpp  OperatorsInitial.h  OperatorsLicense.cpp  OperatorsLicense.h  OperatorsMeshBaseManager.cpp  OperatorsMeshBaseManager.h  OperatorsMeshGeoManager.cpp  OperatorsMeshGeoManager.h  OperatorsMeshLocalManager.cpp  OperatorsMeshLocalManager.h  OperatorsMeshManager.cpp  OperatorsMeshManager.h  OperatorsMeshPointManager.cpp  OperatorsMeshPointManager.h  OperatorsModel.pri  OperatorsModelAPI.h  OperatorsNew.cpp  OperatorsNew.h  OperatorsOpen.cpp  OperatorsOpen.h  OperatorsOperCondition.cpp  OperatorsOperCondition.h  (+24 more)
docs/: PPT-MyCAE.pptx  README.md  development-architecture.md  sample-projects.md  solver-workflow.md  user-guide.md
resource/geometry/: box_1.brep  box_1.json  box_1.step
samples/calculix/: box_pressure.inp  single_tetra.inp
src/: main.cpp
src/commands/: AppCommand.h  CommandUtilities.cpp  CommandUtilities.h  DisplayModeCommands.cpp  DisplayModeCommands.h  FaceGroupCommandUtilities.cpp  FaceGroupCommandUtilities.h  FaceGroupEditCommands.cpp  FaceGroupEditCommands.h  GeometryCommands.cpp  GeometryCommands.h  MeshCommands.cpp  MeshCommands.h  PickModeCommands.cpp  PickModeCommands.h  ProjectCommands.cpp  ProjectCommands.h  SolverCommands.cpp  SolverCommands.h  UndoStackController.cpp  UndoStackController.h  UtilityCommands.cpp  UtilityCommands.h  WorkflowCommandContext.h
src/diagnostics/: DiagnosticCollector.cpp  DiagnosticCollector.h  DiagnosticMessage.cpp  DiagnosticMessage.h
src/geometry/: BoxGeometry.h  CylinderGeometry.h  FaceGroup.h  FaceGroupReferenceService.cpp  FaceGroupReferenceService.h  FaceGroupService.cpp  FaceGroupService.h  FaceReferenceUtils.cpp  FaceReferenceUtils.h  GeometryBooleanController.cpp  GeometryBooleanController.h  GeometryBooleanOperation.h  GeometryCreationController.cpp  GeometryCreationController.h  GeometryDependencyInvalidator.cpp  GeometryDependencyInvalidator.h  GeometryDisplayController.cpp  GeometryDisplayController.h  GeometryManager.cpp  GeometryManager.h  GeometryObject.h  GeometryPropertyController.cpp  GeometryPropertyController.h  GeometryTransform.h  PlateWithHoleGeometry.h  SphereGeometry.h
src/mesh/: GmshCaseWriter.cpp  GmshCaseWriter.h  GmshRunner.cpp  GmshRunner.h  MeshBoundary.h  MeshBoundaryBuilder.cpp  MeshBoundaryBuilder.h  MeshData.h  MeshManager.cpp  MeshManager.h  MeshObject.h  MeshQualityChecker.cpp  MeshQualityChecker.h  MeshQualityService.cpp  MeshQualityService.h  (+7 more)
(+411 files in other folders)
